# eleve-chat-desktop

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.tree-sitter-cache/: critical_nodes.json  file_hashes.json  project-index.json  summary.toon
docs/: ELEVE输入框对齐Hermes设计方案_2026-07-20.md  ts-type-governance-plan.md  ui-redesign-plan.md  前端断线诊断与修复方案_2026-07-20.md
src-tauri/: Cargo.toml  README.md  absolute_test_123.txt  eleve_combined_test.txt  eleve_test.txt  eleve_test_demo.txt  file_test_tool.py  file_tool_test.txt  hello.py  kanban_file_test.txt  kanban_test_result.md  nsis-uninstall-hook.nsh  retest_file.txt  subagent_test.txt  tauri.conf.json  terminal_test.txt  test.txt  test_combined.txt  test_file_tool_results.txt  test_file_tools.txt  test_read.txt  test_result.txt  test_t1_basic.txt  test_v2.txt  test_write_002.txt  test_write_demo.txt  tetris.html  小胖墩儿_test.txt  测试计划文件工具子agent.md
src-tauri/$ELEVE_KANBAN_WORKSPACE/: test_file.md  test_marker.txt
src-tauri/ELEVE_KANBAN_WORKSPACE/: test_config.yaml  test_data.json  test_file.txt
src-tauri/ai_report/: report_template.md
src-tauri/binaries/: config.default.yaml  config.yaml
src-tauri/blog/: README.md  SPEC.md
src-tauri/blog-project/: ARCHITECTURE.md  README.md  app.py
src-tauri/blog-project/data/: posts.json
src-tauri/blog-project/static/: app.js  editor.html  index.html  post.html  style.css
src-tauri/capabilities/: default.json
src-tauri/gobang/: index.html
src-tauri/src/: lib.rs  main.rs
(+156 files in other folders)
